--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon">
-    <title>PokeDex</title>
+    <title>Pokédex</title>
 </head>
 <body>
-    
+
+    <main>
+        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/150.gif" alt="pokemon" class="pokemon_image">
+
+        <h1 class="pokemon_data">
+            <span class="pokemon_number">150</span>
+            <span class="pokemon_name">Mewtwo</span>
+        </h1>
+
+        <form class="form">
+            <input 
+            type="search"
+            class="input_search"
+            placeholder="Name or Number"
+            required
+            >
+        </form>
+
+        <div class="buttons">
+            <button class="button btn-prev">Prev &lt;</button>
+            <button class="button btn-next">Next &gt;</button>
+        </div>
+
+        <img src="imgs/pokedex.png" alt="pokedex" class="pokedex">
+
+    </main>
+
 </body>
 </html>
