--- a/index.html
+++ b/index.html
@@ -3,18 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="styles/style.css">
     <link rel="shortcut icon" href="imgs/favicon.ico" type="image/x-icon">
+
+    <script defer src="js/script.js"></script>
+    
     <title>Pokédex</title>
 </head>
 <body>
 
     <main>
-        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/versions/generation-v/black-white/animated/150.gif" alt="pokemon" class="pokemon_image">
+        <img src="" class="pokemon_image">
 
         <h1 class="pokemon_data">
-            <span class="pokemon_number">150</span>
-            <span class="pokemon_name">Mewtwo</span>
+            <span class="pokemon_number"></span>
+            <span class="pokemon_name"></span>
         </h1>
 
         <form class="form">
